--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ r_github_packages:
 
 before_script:
   - wget ftp://ftp.ebi.ac.uk/pub/databases/reference_proteomes/QfO/Bacteria/UP000001584_83332.fasta.gz
-  - gunzip UP000001584_83332.fasta.gz
+  - gunzip UP000001584_83332.fasta.gz | yes
   - rm UP000001584_83332.fasta.gz
 
 script:
