--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ r_github_packages:
   - MangoTheCat/goodpractice
 
 before_script:
-  - wget ftp://ftp.ebi.ac.uk/pub/databases/reference_proteomes/QfO/Bacteria/UP000001584_83332.fasta.gz
-  - yes | gunzip UP000001584_83332.fasta.gz
-  - rm UP000001584_83332.fasta.gz
+  - # wget ftp://ftp.ebi.ac.uk/pub/databases/reference_proteomes/QfO/Bacteria/UP000001584_83332.fasta.gz
+  - # gunzip UP000001584_83332.fasta.gz
+  - # rm UP000001584_83332.fasta.gz
 
 script:
   - ls
