--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ tmhmm_result\.pdf
 tmhmm_result\.htmlnet_mhc2_pan.html
 net_mhc2_pan.html
 tmhmm_result.html
+doc/bianchi_textor_bogaart_2017.pdf
+doc/bianchi_textor_bogaart_2017_data_sheet_1.pdf
+doc/bianchi_textor_bogaart_2017_rcode/
