--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ tmhmm_result.html
 doc/bianchi_textor_bogaart_2017.pdf
 doc/bianchi_textor_bogaart_2017_data_sheet_1.pdf
 doc/bianchi_textor_bogaart_2017_rcode/
+net_mhc2_pan_short.html
