--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,5 @@ export(get_bbbq_path)
 export(get_bbbq_paths)
 export(get_protein_lengths)
 export(get_proteome)
+importFrom(Rcpp,sourceCpp)
+useDynLib(bbbq, .registration = TRUE)
