--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,10 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Imports:
-  seqinr,
-  testit
+    seqinr,
+    testit,
+    Rcpp
 Suggests: 
   testthat
+LinkingTo: 
+    Rcpp
