--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ doc/bianchi_textor_bogaart_2017.pdf
 doc/bianchi_textor_bogaart_2017_data_sheet_1.pdf
 doc/bianchi_textor_bogaart_2017_rcode/
 net_mhc2_pan_short.html
+*.pro.user
