--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Imports:
-    seqinr,
-    Rcpp
+    seqinr
 Suggests: 
     testit,
     testthat
