--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,16 +7,21 @@ Authors@R:
            role = c("aut", "cre"),
            email = "richel@richelbilderbeek.nl")
 Description: 
-  What the package does (one paragraph).
-  What the package does (one paragraph).
-  What the package does (one paragraph).
+    What the package does (one paragraph).
+    What the package does (one paragraph).
+    What the package does (one paragraph).
 License: GPL-3 | file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Imports:
     epitopeome,
-    seqinr
+    netmhc2pan,
+    stringr,  
+    tmhmm
 Suggests: 
     testit,
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
