--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ r_github_packages:
   - MangoTheCat/goodpractice
 
 before_script:
+  - sudo apt install libgit2-dev 
   # C++14
   # - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   # - sudo apt-get update -qq
