--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: R
 cache: packages
 dist: trusty
-sudo: false
 
 r_packages:
   - devtools
@@ -18,10 +17,9 @@ r_github_packages:
   - MangoTheCat/goodpractice
 
 before_install:
-  - sudo apt install libgit2-dev 
+  - sudo apt-get install libgit2-dev 
 
 before_script:
-  - sudo apt install libgit2-dev 
   # C++14
   # - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   # - sudo apt-get update -qq
