--- a/.travis.yml
+++ b/.travis.yml
@@ -17,12 +17,13 @@ r_github_packages:
   - MangoTheCat/goodpractice
 
 before_install:
+  # C++14
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
+  # libgit2-dev
   - sudo apt-get install libgit2-dev 
 
 before_script:
-  # C++14
-  # - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  # - sudo apt-get update -qq
   # C++14
   # - sudo apt-get install -qq g++-6
   # - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
