--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ r_packages:
   - hunspell
   - xml2
 
+r_binary_packages:
+    - libgit2
+    - magick
+
 r_github_packages:
   - jimhester/covr
   - jimhester/lintr
@@ -21,7 +25,7 @@ before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
   # libgit2-dev
-  - sudo apt-get install libgit2-dev 
+  - sudo apt-get install libgit2-dev
 
 before_script:
   # C++14
