--- a/.travis.yml
+++ b/.travis.yml
@@ -20,12 +20,12 @@ r_github_packages:
   - richelbilderbeek/tmhmm
   - MangoTheCat/goodpractice
 
-before_install:
+#before_install:
   # C++14
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update -qq
+  #- sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  #- sudo apt-get update -qq
   # libgit2-dev
-  - sudo apt-get install libgit2-dev
+  #- sudo apt-get install libgit2-dev
 
 before_script:
   # C++14
