--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ before_install:
   #- sudo apt-get update -qq
   # libgit2-dev
   - sudo apt-get install libgit2-dev
+  - sudo apt-get install libgit2*
 
 before_script:
   # C++14
