--- a/.travis.yml
+++ b/.travis.yml
@@ -20,18 +20,18 @@ before_install:
   - sudo apt-get install -y libmagick++-dev
   - sudo apt-get install -y libgit2-dev
   # C++14
-  #- sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  #- sudo apt-get update -qq
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
 
 before_script:
   # C++14
-  # - sudo apt-get install -qq g++-6
-  # - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
+  - sudo apt-get install -qq g++-6
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
   # Boost
-  # - sudo apt-get install libboost-all-dev
+  - sudo apt-get install libboost-all-dev
   # Qt5
-  # - sudo apt-get install -qq libqt5webkit5-dev qtdeclarative5-dev libqt5svg5*
-  # - export QMAKE=/usr/lib/x86_64-linux-gnu/qt5/bin/qmake
+  - sudo apt-get install -qq libqt5webkit5-dev qtdeclarative5-dev libqt5svg5*
+  - export QMAKE=/usr/lib/x86_64-linux-gnu/qt5/bin/qmake
   # Install TMHMM
   - Rscript -e "tmhmm::install_tmhmm(tmhmm::get_tmhmm_url())"
   # Install NetMHC2pan
