--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_install:
   - sudo apt-get update
   - sudo apt-get install -y libmagick++-dev
   - sudo apt-get install -y libgit2-dev
+  - apt-cache search libgit2
   # C++14
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
