--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ r_packages:
 r_github_packages:
   - jimhester/covr
   - jimhester/lintr
+  - richelbilderbeek/epitopeome
   - richelbilderbeek/netmhc2pan
   - richelbilderbeek/tmhmm
   - MangoTheCat/goodpractice
