--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,9 @@ r_github_packages:
 
 before_install:
   - sudo apt-get install libgit2-dev libgit2-dbg r-cran-git2r
+  - sudo add-apt-repository -y ppa:opencpu/imagemagick
+  - sudo apt-get update
+  - sudo apt-get install -y libmagick++-dev
   - apt-cache search libgit
   - apt-cache search git2
   - apt-cache search git3
