--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,6 @@ sudo: true
 cache: packages
 dist: trusty
 
-r_binary_packages:
-  - libgit2
-  - magick
-
 r_packages:
   - devtools
 
@@ -28,7 +24,7 @@ before_install:
   - apt-cache search libgit
   - apt-cache search git2
   - apt-cache search git3
-  - # sudo apt-get install -y libgit2-dev libgit2-dbg r-cran-git2r
+  - sudo apt-get install -y libgit2-dev libgit2-dbg r-cran-git2r
 
 before_script:
   # C++14
