--- a/.travis.yml
+++ b/.travis.yml
@@ -17,16 +17,18 @@ r_github_packages:
 before_install:
   - sudo add-apt-repository -y ppa:opencpu/imagemagick
   - sudo apt-get update
-  - sudo apt-get install -y libmagick++-dev
+  - sudo apt-get install -qq libmagick++-dev
   # C++14
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
-  - sudo apt-get install -y libgit2-dev libgit2-dbg r-cran-git2r
+  - sudo apt-get install -qqlibgit2-dev libgit2-dbg r-cran-git2r
   # C++14
   - sudo apt-get install -qq g++-6
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
   # Boost
-  - sudo apt-get install libboost-all-dev
+  - sudo apt-get install -qq libboost-all-dev
+  # Fortran
+  - sudo apt-get install -qq libgfortran-7-dev
 
 before_script:
   # Qt5
