--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ before_install:
   # Boost
   - sudo apt-get install -qq libboost-all-dev
   # Fortran
+  - sudo apt-get install -qq libssl-dev
   - sudo apt-get install -qq libgfortran-7-dev
 
 before_script:
