Do parts of testing on Travis only

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ r_github_packages:
   - richelbilderbeek/netmhc2pan@develop
   - richelbilderbeek/tmhmm@develop
   - richelbilderbeek/epitopeome
+  - richelbilderbeek/beastier
 
 before_install:
   - sudo add-apt-repository -y ppa:opencpu/imagemagick
