--- a/.travis.yml
+++ b/.travis.yml
@@ -19,12 +19,7 @@ before_install:
   - sudo apt-get update
   - sudo apt-get install -qq libmagick++-dev
   # C++14
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq libgit2-dev libgit2-dbg r-cran-git2r
-  # C++14
-  - sudo apt-get install -qq g++-6
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
+  #- sudo apt-get install -qq libgit2-dev libgit2-dbg r-cran-git2r
   # Boost
   - sudo apt-get install -qq libboost-all-dev
   # Fortran
@@ -33,8 +28,7 @@ before_install:
 
 before_script:
   # Qt5
-  - sudo apt-get install -qq libqt5webkit5-dev qtdeclarative5-dev libqt5svg5*
-  - export QMAKE=/usr/lib/x86_64-linux-gnu/qt5/bin/qmake
+  - sudo apt-get install -qq qt5-qmake qt5-default
   # Install and test TMHMM
   - Rscript -e "tmhmm::install_tmhmm()"
   - echo -e ">sp|L0T550|RIP2_MYCTU_158_180\nAVLWAGVAFLAFLQLTALVLNLL" > example.fasta
