Remove dead symbolic link

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -7,8 +7,11 @@
 ^pics$
 ^cpp$
 ^scripts$
-^scripts_1$
-^scripts_2$
+^scripts_1/$
+^scripts_2/$
+^scripts_3/$
+^scripts_4/$
+^LICENSE$
 ^net_mhc2_pan\.html$
 ^net_mhc2_pan_short\.html$
 ^tmhmm_result\.html$
