--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,10 +11,10 @@ Description:
     is a very important question.
     This package answers this question.
     These answers are not published yet.
-License: GPL-3 | file LICENSE
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.0.2
 Imports:
     epitopeome,
     netmhc2pan,
