--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,7 @@ export(answer_bbbq_1)
 export(answer_bbbq_2)
 export(calc_overlaps)
 export(get_mhc1_haplotypes)
+export(get_mhc2_haplotype_occurance)
 export(get_mhc2_haplotypes)
 export(get_tmh_lengths)
+export(to_netmhc2pan_name)
