--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,10 @@
 export(answer_bbbq_1)
 export(answer_bbbq_2)
 export(calc_overlaps)
+export(explode)
 export(get_mhc1_haplotypes)
 export(get_mhc2_haplotype_occurance)
 export(get_mhc2_haplotypes)
 export(get_tmh_lengths)
+export(nlapply)
 export(to_netmhc2pan_name)
