--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ r_github_packages:
   - richelbilderbeek/tmhmm
   - richelbilderbeek/epitopeome
   - richelbilderbeek/beastier
+  - jtextor/EpitopePrediction
 
 before_install:
   - sudo add-apt-repository -y ppa:opencpu/imagemagick
