--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,12 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
 Imports:
+    data.table,
     epitopeome,
+    EpitopePrediction,
+    ggplot2,
     netmhc2pan,
+    seqinr,
     stringr,  
     tmhmm
 Suggests:
