'prepare_data' needs a FASTA filename

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,4 +9,5 @@ export(get_mhc2_haplotype_occurance)
 export(get_mhc2_haplotypes)
 export(get_tmh_lengths)
 export(nlapply)
+export(prepare_data)
 export(to_netmhc2pan_name)
