--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 export(answer_bbbq_1)
 export(answer_bbbq_2)
 export(calc_overlaps)
+export(calculate_overlap)
 export(explode)
+export(get_hlas)
 export(get_mhc1_haplotypes)
 export(get_mhc2_haplotype_occurance)
 export(get_mhc2_haplotypes)
