--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,9 @@ export(get_hlas)
 export(get_mhc1_haplotypes)
 export(get_mhc2_haplotype_occurance)
 export(get_mhc2_haplotypes)
+export(get_non_tmh_polypeptides_from_elution)
 export(get_tmh_lengths)
+export(get_tmh_polypeptides_from_elution)
 export(nlapply)
 export(prepare_data)
 export(to_netmhc2pan_name)
