--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(answer_bbbq_1)
 export(answer_bbbq_2)
 export(calc_overlaps)
 export(calculate_overlap)
+export(correlate_to_hydrophobicity)
 export(explode)
 export(get_hlas)
 export(get_mhc1_haplotypes)
@@ -12,6 +13,7 @@ export(get_mhc2_haplotypes)
 export(get_non_tmh_polypeptides_from_elution)
 export(get_tmh_lengths)
 export(get_tmh_polypeptides_from_elution)
+export(hyPref)
 export(nlapply)
 export(prepare_data)
 export(to_netmhc2pan_name)
