--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,5 +15,6 @@ export(get_tmh_lengths)
 export(get_tmh_polypeptides_from_elution)
 export(hyPref)
 export(nlapply)
+export(plot_markov_chain)
 export(prepare_data)
 export(to_netmhc2pan_name)
