Added 'plot_markov_chain_[tool]' functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,5 +16,8 @@ export(get_tmh_polypeptides_from_elution)
 export(hyPref)
 export(nlapply)
 export(plot_markov_chain)
+export(plot_markov_chain_dot)
+export(plot_markov_chain_igraph)
+export(plot_markov_chain_tikz)
 export(prepare_data)
 export(to_netmhc2pan_name)
