--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(calc_overlaps)
 export(calculate_overlap)
 export(correlate_to_hydrophobicity)
 export(explode)
+export(get_amino_acids)
 export(get_hlas)
 export(get_mhc1_haplotypes)
 export(get_mhc2_haplotype_occurance)
