--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(answer_bbbq_1)
 export(answer_bbbq_2)
+export(are_detected_by_mhc_1)
+export(are_detected_by_mhc_2)
 export(calc_overlaps)
 export(calculate_overlap)
 export(correlate_to_hydrophobicity)
@@ -15,6 +17,8 @@ export(get_non_tmh_polypeptides_from_elution)
 export(get_tmh_lengths)
 export(get_tmh_polypeptides_from_elution)
 export(hyPref)
+export(is_detected_by_mhc_1)
+export(is_detected_by_mhc_2)
 export(nlapply)
 export(plot_markov_chain)
 export(plot_markov_chain_dot)
