Recreate FLU matrix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,12 @@ export(are_detected_by_mhc_1)
 export(are_detected_by_mhc_2)
 export(calc_overlaps)
 export(calculate_overlap)
+export(convert_triplet_to_amino_acid)
 export(correlate_to_hydrophobicity)
 export(explode)
+export(get_aa_transition_matrix)
 export(get_amino_acids)
+export(get_genetic_code)
 export(get_hlas)
 export(get_mhc1_haplotypes)
 export(get_mhc2_haplotype_occurance)
@@ -16,6 +19,7 @@ export(get_mhc2_haplotypes)
 export(get_non_tmh_polypeptides_from_elution)
 export(get_tmh_lengths)
 export(get_tmh_polypeptides_from_elution)
+export(get_transition_rate)
 export(hyPref)
 export(is_detected_by_mhc_1)
 export(is_detected_by_mhc_2)
