--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,11 @@ export(calc_overlaps)
 export(calculate_overlap)
 export(convert_triplet_to_amino_acid)
 export(correlate_to_hydrophobicity)
+export(create_random_hydrophobic_polypeptide)
+export(create_random_tmh)
 export(explode)
 export(get_aa_transition_matrix)
+export(get_adjacent_sequences)
 export(get_amino_acids)
 export(get_genetic_code)
 export(get_hlas)
@@ -29,4 +32,5 @@ export(plot_markov_chain_dot)
 export(plot_markov_chain_igraph)
 export(plot_markov_chain_tikz)
 export(prepare_data)
+export(replace_nth_char)
 export(to_netmhc2pan_name)
