--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,11 @@
 
 export(answer_bbbq_1)
 export(answer_bbbq_2)
+export(are_detected)
 export(are_detected_by_mhc_1)
 export(are_detected_by_mhc_2)
 export(calc_overlaps)
+export(calc_p_det_tmh_mut)
 export(calculate_overlap)
 export(convert_triplet_to_amino_acid)
 export(correlate_to_hydrophobicity)
@@ -23,7 +25,9 @@ export(get_non_tmh_polypeptides_from_elution)
 export(get_tmh_lengths)
 export(get_tmh_polypeptides_from_elution)
 export(get_transition_rate)
+export(get_transition_rates)
 export(hyPref)
+export(is_detected)
 export(is_detected_by_mhc_1)
 export(is_detected_by_mhc_2)
 export(nlapply)
