--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,9 @@ export(calc_p_det_tmh_mut)
 export(calculate_overlap)
 export(convert_triplet_to_amino_acid)
 export(correlate_to_hydrophobicity)
+export(create_random_extreme_polypeptide)
 export(create_random_hydrophobic_polypeptide)
+export(create_random_polypeptide)
 export(create_random_tmh)
 export(explode)
 export(get_aa_transition_matrix)
@@ -30,10 +32,11 @@ export(hyPref)
 export(is_detected)
 export(is_detected_by_mhc_1)
 export(is_detected_by_mhc_2)
+export(is_polypeptide)
 export(nlapply)
 export(plot_markov_chain)
 export(plot_markov_chain_dot)
-export(plot_markov_chain_igraph)
+export(plot_markov_chain_markovchain)
 export(plot_markov_chain_tikz)
 export(prepare_data)
 export(replace_nth_char)
