All tests pass locally, can set MHC-I haplotype

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,4 +39,5 @@ export(plot_markov_chain_dot)
 export(plot_markov_chain_tikz)
 export(prepare_data)
 export(replace_nth_char)
+export(to_epitope_prediction_name)
 export(to_netmhc2pan_name)
