--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(correlate_to_hydrophobicity)
 export(create_random_extreme_polypeptide)
 export(create_random_hydrophobic_polypeptide)
 export(create_random_polypeptide)
+export(create_random_polypeptide_with_hydrophobicity)
 export(create_random_tmh)
 export(explode)
 export(get_aa_transition_matrix)
