--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,11 @@ export(calc_p_det_tmh_mut)
 export(calculate_overlap)
 export(convert_triplet_to_amino_acid)
 export(correlate_to_hydrophobicity)
-export(create_random_extreme_polypeptide)
-export(create_random_hydrophobic_polypeptide)
-export(create_random_polypeptide)
-export(create_random_polypeptide_with_hydrophobicity)
+export(create_random_extreme_peptide)
+export(create_random_hydrophobic_peptide)
+export(create_random_peptide)
+export(create_random_peptide_with_hydrophobicity)
+export(create_random_peptides)
 export(create_random_tmh)
 export(explode)
 export(get_aa_transition_matrix)
@@ -24,17 +25,18 @@ export(get_mhc1_haplotypes)
 export(get_mhc2_haplotype_occurance)
 export(get_mhc2_haplotypes)
 export(get_mhc2_ic50_threshold)
-export(get_non_tmh_polypeptides_from_elution)
+export(get_non_tmh_peptides_from_elution)
 export(get_tmh_lengths)
-export(get_tmh_polypeptides_from_elution)
+export(get_tmh_peptides_from_elution)
 export(get_transition_rate)
 export(get_transition_rates)
 export(hyPref)
 export(is_detected)
 export(is_detected_by_mhc_1)
 export(is_detected_by_mhc_2)
-export(is_polypeptide)
+export(is_peptide)
 export(nlapply)
+export(predict_ic50s_mhc1)
 export(prepare_data)
 export(replace_nth_char)
 export(to_epitope_prediction_name)
