--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,10 @@ before_install:
   # Boost
   - sudo apt-get install -qq libboost-all-dev
 
+before_script:
+  - sudo apt install python3-pip
+  - Rscript -e 'mhcnuggetsr::install_mhcnuggets()'
+
 after_success:
   - Rscript -e 'lintr::lint_package()'
   - Rscript -e 'covr::codecov()'
