--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Imports:
     EpitopePrediction,
     ggplot2,
     methods,
-    mhcnuggetsr,
+    mhcnuggetsr (>= 0.10),
+    mhcnpreds,
     Peptides,
     png,
     pureseqtmr,
