--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(calc_overlaps)
 export(calc_p_det_tmh_mut)
 export(calculate_overlap)
 export(check_mhc_1_haplotype_name)
+export(check_mhc_haplotype_name)
 export(convert_triplet_to_amino_acid)
 export(correlate_to_hydrophobicity)
 export(create_random_extreme_peptide)
