--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: R
 dist: bionic
 cache: packages
 
+env:
+  - INSTALL_MHCNUGGETS=true
+  - INSTALL_MHCNUGGETS=false
+
 r_packages:
   - devtools
 
@@ -16,6 +20,10 @@ r_github_packages:
 before_install:
   # Boost
   - sudo apt-get install -qq libboost-all-dev
+
+before_script:
+  - sudo apt install python3-pip
+  - if [[ "$INSTALL_MHCNUGGETS" == true ]]; then Rscript -e 'mhcnuggetsr::install_mhcnuggets()'; fi
 
 before_script:
   - sudo apt install python3-pip
