Remove obsolete functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,10 @@
 
 export(answer_bbbq_2)
 export(are_detected)
-export(are_detected_by_mhc_1)
 export(calc_overlaps)
 export(calc_p_det_tmh_mut)
 export(calculate_overlap)
-export(check_mhc_1_haplotype_name)
+export(check_ep_haplotype_name)
 export(check_mhc_haplotype_name)
 export(convert_triplet_to_amino_acid)
 export(correlate_to_hydrophobicity)
@@ -33,10 +32,8 @@ export(get_transition_rate)
 export(get_transition_rates)
 export(hyPref)
 export(is_detected)
-export(is_detected_by_mhc_1)
 export(is_peptide)
 export(nlapply)
-export(predict_ic50s_mhc1)
 export(prepare_data)
 export(replace_nth_char)
 export(to_epitope_prediction_name)
