--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(get_mhc1_haplotypes)
 export(get_mhc2_haplotype_occurance)
 export(get_mhc2_haplotypes)
 export(get_mhc2_ic50_threshold)
+export(get_mhc_haplotypes)
 export(get_non_tmh_peptides_from_elution)
 export(get_tmh_lengths)
 export(get_tmh_peptides_from_elution)
