Implement 'calc_overlap_peptide', progress #27

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export("%>%")
 export(are_detected)
+export(calc_overlap)
+export(calc_overlap_peptide)
 export(calc_overlaps)
 export(calc_p_det_tmh_mut)
 export(calculate_overlap)
@@ -18,6 +20,7 @@ export(create_random_tmh)
 export(explode)
 export(get_aa_transition_matrix)
 export(get_adjacent_sequences)
+export(get_covid_proteome_filename)
 export(get_genetic_code)
 export(get_hlas)
 export(get_mhc1_haplotypes)
@@ -26,6 +29,7 @@ export(get_mhc2_haplotypes)
 export(get_mhc2_ic50_threshold)
 export(get_mhc_haplotypes)
 export(get_non_tmh_peptides_from_elution)
+export(get_test_proteome_filename)
 export(get_tmh_lengths)
 export(get_tmh_peptides_from_elution)
 export(get_transition_rate)
