Implemented 'predict_n_binders_tmh', fix #28

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,6 @@
 
 export("%>%")
 export(are_detected)
-export(calc_overlap)
-export(calc_overlap_peptide)
-export(calc_overlaps)
 export(calc_p_det_tmh_mut)
 export(calculate_overlap)
 export(check_ep_haplotype_name)
@@ -38,6 +35,9 @@ export(hyPref)
 export(is_detected)
 export(is_peptide)
 export(nlapply)
+export(predict_n_binders_tmh)
+export(predict_n_binders_tmh_peptide)
+export(predict_n_binders_tmh_peptides)
 export(prepare_data)
 export(replace_nth_char)
 export(to_epitope_prediction_name)
