--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(hyPref)
 export(is_detected)
 export(is_peptide)
 export(nlapply)
+export(predict_f_binders_tmh)
 export(predict_n_binders_tmh)
 export(predict_n_binders_tmh_peptide)
 export(predict_n_binders_tmh_peptides)
