--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,12 @@ before_script:
 
 after_failure:
   - Rscript -e 'mhcnuggetsr::mhcnuggetsr_report()'
+  - Rscript -e 'pureseqtmr::pureseqtmr_report()'
 
 after_success:
   - Rscript -e 'lintr::lint_package()'
   - Rscript -e 'covr::codecov()'
   - Rscript -e 'goodpractice::gp()'
   - Rscript -e 'mhcnuggetsr::mhcnuggetsr_report()'
+  - Rscript -e 'pureseqtmr::pureseqtmr_report()'
 
