--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,9 @@ export(predict_f_binders_tmh)
 export(predict_n_binders_tmh)
 export(predict_n_binders_tmh_peptide)
 export(predict_n_binders_tmh_peptides)
+export(predict_n_coincidence_tmh)
+export(predict_n_coincidence_tmh_peptide)
+export(predict_n_coincidence_tmh_peptides)
 export(prepare_data)
 export(replace_nth_char)
 export(to_epitope_prediction_name)
