Add 'get_mhc[mhc_class]_peptide_length, progress https://github.com/richelbilderbeek/bbbq_article/issues/40

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,8 +21,10 @@ export(get_genetic_code)
 export(get_hlas)
 export(get_ic50_percentile_binder)
 export(get_mhc1_haplotypes)
+export(get_mhc1_peptide_length)
 export(get_mhc2_haplotype_occurance)
 export(get_mhc2_haplotypes)
+export(get_mhc2_peptide_length)
 export(get_mhc_haplotypes)
 export(get_non_tmh_peptides_from_elution)
 export(get_test_proteome_filename)
