--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(check_ep_haplotype_name)
 export(check_mhc_haplotype_name)
 export(convert_triplet_to_amino_acid)
 export(correlate_to_hydrophobicity)
+export(create_haplotypes_lut)
 export(create_random_extreme_peptide)
 export(create_random_hydrophobic_peptide)
 export(create_random_peptide_with_hydrophobicity)
