--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(check_mhc_haplotype_name)
 export(convert_triplet_to_amino_acid)
 export(correlate_to_hydrophobicity)
 export(create_haplotypes_lut)
+export(create_proteins_lut)
 export(create_random_extreme_peptide)
 export(create_random_hydrophobic_peptide)
 export(create_random_peptide_with_hydrophobicity)
@@ -28,6 +29,9 @@ export(get_mhc2_haplotypes)
 export(get_mhc2_peptide_length)
 export(get_mhc_haplotypes)
 export(get_non_tmh_peptides_from_elution)
+export(get_test_covid_proteome_filename)
+export(get_test_human_proteome_filename)
+export(get_test_myco_proteome_filename)
 export(get_test_proteome_filename)
 export(get_tmh_lengths)
 export(get_tmh_peptides_from_elution)
