--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,10 +41,9 @@ export(hyPref)
 export(is_detected)
 export(is_peptide)
 export(nlapply)
+export(predict_counts)
 export(predict_n_binders_tmh_peptide)
-export(predict_n_coincidence_tmh)
 export(predict_n_coincidence_tmh_peptide)
-export(predict_n_coincidence_tmh_peptides)
 export(prepare_data)
 export(replace_nth_char)
 export(to_epitope_prediction_name)
