--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(get_mhc2_haplotype_occurance)
 export(get_mhc2_haplotypes)
 export(get_mhc2_peptide_length)
 export(get_mhc_haplotypes)
+export(get_mhc_peptide_length)
 export(get_non_tmh_peptides_from_elution)
 export(get_test_covid_proteome_filename)
 export(get_test_human_proteome_filename)
