--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ RoxygenNote: 7.1.1
 Imports:
     data.table,
     dplyr,
+    epiprepreds,
     EpitopePrediction,
     ggplot2,
     glue,
@@ -25,6 +26,8 @@ Imports:
     methods,
     mhcnuggetsr (>= 0.11),
     mhcnpreds,
+    netmhc2pan,
+    nmhc2ppreds,
     Peptides,
     png,
     pureseqtmr,
