Add 'shred_protein', fix https://github.com/richelbilderbeek/bbbq_article/issues/50

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,5 +47,6 @@ export(predict_n_binders_tmh_peptide)
 export(predict_n_coincidence_tmh_peptide)
 export(prepare_data)
 export(replace_nth_char)
+export(shred_protein)
 export(to_epitope_prediction_name)
 importFrom(magrittr,"%>%")
