--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(is_detected)
 export(is_peptide)
 export(nlapply)
 export(predict_counts)
+export(predict_counts_per_proteome)
 export(predict_n_binders_tmh_peptide)
 export(predict_n_coincidence_tmh_peptide)
 export(prepare_data)
