--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,10 @@ r_github_packages:
   - richelbilderbeek/netmhc2pan
   - richelbilderbeek/nmhc2ppreds
 
-before_script:
+before_install:
   - sudo apt install -qq libmpfr-dev
+
+before_script:
   - if [[ "$INSTALL_TOOLS" == true ]]; then sudo apt install tcsh; fi
   - if [[ "$INSTALL_TOOLS" == true ]]; then Rscript -e 'mhcnuggetsr::install_mhcnuggets()'; fi
   - if [[ "$INSTALL_TOOLS" == true ]]; then Rscript -e 'pureseqtmr::install_pureseqtm()'; fi
