--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,9 @@ export(are_detected)
 export(calc_p_det_tmh_mut)
 export(calculate_overlap)
 export(check_ep_haplotype_name)
+export(check_haplotype)
+export(check_ic50_prediction_tool)
+export(check_ic50_prediction_tool_installation)
 export(check_mhc_haplotype_name)
 export(convert_triplet_to_amino_acid)
 export(correlate_to_hydrophobicity)
@@ -22,6 +25,7 @@ export(get_covid_proteome_filename)
 export(get_genetic_code)
 export(get_hlas)
 export(get_ic50_percentile_binder)
+export(get_ic50_threshold)
 export(get_mhc1_haplotypes)
 export(get_mhc1_peptide_length)
 export(get_mhc2_haplotype_occurance)
@@ -44,6 +48,7 @@ export(is_peptide)
 export(nlapply)
 export(predict_counts)
 export(predict_counts_per_proteome)
+export(predict_ic50s)
 export(predict_n_binders_tmh_peptide)
 export(predict_n_coincidence_tmh_peptide)
 export(prepare_data)
