--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ before_script:
   - if [[ "$INSTALL_TOOLS" == true ]]; then sudo apt install tcsh; fi
   - if [[ "$INSTALL_TOOLS" == true ]]; then Rscript -e 'mhcnuggetsr::install_mhcnuggets()'; fi
   - if [[ "$INSTALL_TOOLS" == true ]]; then Rscript -e 'pureseqtmr::install_pureseqtm()'; fi
-  - if [[ "$INSTALL_TOOLS" == true ]]; then Rscript -e 'netmhc2pan::install_netmhc2pan()'; fi
+  - if [[ "$INSTALL_TOOLS" == true ]]; then Rscript -e 'if (netmhc2pan::is_url_valid()) netmhc2pan::install_netmhc2pan()'; fi
 
 after_failure:
   - Rscript -e 'mhcnuggetsr::mhcnuggetsr_report()'
