--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(check_haplotype)
 export(check_ic50_prediction_tool)
 export(check_ic50_prediction_tool_installation)
 export(check_mhc_haplotype_name)
+export(check_protein_sequences_length)
 export(convert_triplet_to_amino_acid)
 export(correlate_to_hydrophobicity)
 export(create_haplotypes_lut)
