--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ RoxygenNote: 7.1.1
 Imports:
     data.table,
     dplyr,
-    epiprepreds,
+    epiprepreds (>= 0.3),
     EpitopePrediction,
     ggplot2,
     glue,
