--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(check_mhc_haplotype_name)
 export(check_protein_sequences_length)
 export(convert_triplet_to_amino_acid)
 export(correlate_to_hydrophobicity)
+export(create_consensus_topology_conservation)
 export(create_haplotypes_lut)
 export(create_proteins_lut)
 export(create_random_extreme_peptide)
