Improve 'create_consensus_topology_conservation', progress https://github.com/richelbilderbeek/bbbq_article/issues/26

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,9 @@ r_github_packages:
   - richelbilderbeek/netmhc2pan
   - richelbilderbeek/nmhc2ppreds
 
+bioc_packages:
+  - msa
+
 before_install:
   # Rmpfr
   - sudo apt install -qq libmpfr-dev
