Depend on tmhmm, progress https://github.com/richelbilderbeek/bbbq_article/issues/74

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ r_github_packages:
   - richelbilderbeek/peregrine
   - richelbilderbeek/mhcnuggetsr
   - richelbilderbeek/mhcnpreds
+  - richelbilderbeek/tmhmm
   - richelbilderbeek/pureseqtmr
   - richelbilderbeek/epitope-prediction
   - richelbilderbeek/epiprepreds
