--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(convert_triplet_to_amino_acid)
 export(correlate_to_hydrophobicity)
 export(create_consensus_topology_conservation)
 export(create_haplotypes_lut)
+export(create_msa)
 export(create_proteins_lut)
 export(create_random_extreme_peptide)
 export(create_random_hydrophobic_peptide)
