Add 'get_uniprot_id', fix https://github.com/richelbilderbeek/bbbq_article/issues/116

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(get_tmh_lengths)
 export(get_tmh_peptides_from_elution)
 export(get_transition_rate)
 export(get_transition_rates)
+export(get_uniprot_id)
 export(hyPref)
 export(is_detected)
 export(is_peptide)
