--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(get_mhc2_peptide_length)
 export(get_mhc_haplotypes)
 export(get_mhc_peptide_length)
 export(get_non_tmh_peptides_from_elution)
+export(get_target_english_name)
 export(get_test_covid_proteome_filename)
 export(get_test_human_proteome_filename)
 export(get_test_myco_proteome_filename)
