--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ r_github_packages:
   - richelbilderbeek/babette
   - richelbilderbeek/tiebeaur
   - ropensci/spelling
-  - richelbilderbeek/mcbette
+  - ropensci/mcbette
   - thijsjanzen/nodeSub
   - richelbilderbeek/pirouette
   - richelbilderbeek/peregrine
