--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,12 @@ env:
 
 r_packages:
   - devtools
+  - rgl
 
 r_github_packages:
   - jimhester/covr
   - jimhester/lintr
   - MangoTheCat/goodpractice
-  - richelbilderbeek/beautier
-  - richelbilderbeek/beastier
   - richelbilderbeek/babette
   - richelbilderbeek/tiebeaur
   - ropensci/spelling
