Travis installs 'libgl-dev' instead of 'mesa-common-dev'

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,8 @@ before_install:
   # Fix rJava error, from https://travis-ci.community/t/cannot-connect-to-java-from-r/9754/8
   - sudo $(which R) CMD javareconf
   # bios2mds
-  - sudo apt-get install mesa-common-dev
+  # - sudo apt-get install mesa-common-dev
+  - sudo apt-get install libgl-dev
 
 before_script:
   # Install rJava, then ...
