--- a/.travis.yml
+++ b/.travis.yml
@@ -45,8 +45,10 @@ before_install:
   # Fix rJava error, from https://travis-ci.community/t/cannot-connect-to-java-from-r/9754/8
   - sudo $(which R) CMD javareconf
   # bios2mds
-  # - sudo apt-get install mesa-common-dev
-  - sudo apt-get install libgl-dev
+  # FAILS - sudo apt-get install mesa-common-dev
+  # FAILS - sudo apt-get install libgl-dev
+  - sudo apt-get install libglu1-mesa-dev
+ 
 
 before_script:
   # Install rJava, then ...
