--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ r_github_packages:
   - jimhester/covr
   - jimhester/lintr
   - MangoTheCat/goodpractice
+  - richelbilderbeek/beastier
+  - richelbilderbeek/mauricer
   - richelbilderbeek/babette
   - richelbilderbeek/tiebeaur
   - ropensci/spelling
