--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -8,90 +8,92 @@ name: R-CMD-check
 
 jobs:
   R-CMD-check:
-    runs-on: macOS-latest
+    strategy:
+      matrix:
+        include:
+          - install_tools: "true" 
+          - install_tools: "false"
+
+    runs-on: ubuntu-18.04
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
+
       - uses: r-lib/actions/setup-r@v1
+
+      - name: Install libcurl4-openssl-dev
+        run: sudo apt install -qq libcurl4-openssl-dev
+
+      - name: Fix rJava error # from https://travis-ci.community/t/cannot-connect-to-java-from-r/9754/8
+        run: sudo $(which R) CMD javareconf
+
+      - name: Install bios2mds prerequisite 'libglu1-mesa-dev'
+        run: sudo apt-get install libglu1-mesa-dev
+
       - name: Install dependencies
         run: |
           install.packages(c("remotes", "rcmdcheck"))
           remotes::install_deps(dependencies = TRUE)
+          remotes::install_cran("rcmdcheck")
+          remotes::install_cran("covr")
+          remotes::install_cran("lintr")
+          remotes::install_github("MangoTheCat/goodpractice")
         shell: Rscript {0}
+
+      - name: Show BEAST2
+        env:
+          INSTALL_TOOLS: ${{ matrix.install_tools }}
+        run: echo "$INSTALL_TOOLS"
+
+      - name: If statement on BEAST2 is true
+        env:
+          INSTALL_TOOLS: ${{ matrix.install_tools }}
+        run: if [[ "$INSTALL_TOOLS" == true ]]; then echo "Yay!"; fi
+
+      - name: Show location
+        run: pwd
+
+      - name: If statement on BEAST2 is false
+        env:
+          INSTALL_TOOLS: ${{ matrix.install_tools }}
+        run: if [[ "$INSTALL_TOOLS" == false ]]; then echo "Nay!"; fi
+
+      - name: Install tool 'tcsh'
+        env:
+          INSTALL_TOOLS: ${{ matrix.install_tools }}
+        run: if [[ "$INSTALL_TOOLS" == true ]]; then sudo apt install tcsh; fi
+
+      - name: Install tool 'MHCnuggets'
+        env:
+          INSTALL_TOOLS: ${{ matrix.install_tools }}
+        run: if [[ "$INSTALL_TOOLS" == true ]]; then Rscript -e 'mhcnuggetsr::install_mhcnuggets()'; fi
+
+      - name: Install tool 'PureseqTM'
+        env:
+          INSTALL_TOOLS: ${{ matrix.install_tools }}
+        run: if [[ "$INSTALL_TOOLS" == true ]]; then Rscript -e 'pureseqtmr::install_pureseqtm()'; fi
+
+      - name: Install tool 'NetMHCIIpan' if URL is valid
+        env:
+          INSTALL_TOOLS: ${{ matrix.install_tools }}
+        run: if [[ "$INSTALL_TOOLS" == true ]]; then Rscript -e 'if (netmhc2pan::is_url_valid()) netmhc2pan::install_netmhc2pan()'; fi
+
       - name: Check
         run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error")
         shell: Rscript {0}
-  # Also test coverage
-  test-coverage:
-    runs-on: macOS-latest
-    env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: r-lib/actions/setup-r@v1
-
-      - uses: r-lib/actions/setup-pandoc@v1
-
-      - name: Query dependencies
-        run: |
-          install.packages('remotes')
-          saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
-          writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
-        shell: Rscript {0}
-
-      - name: Cache R packages
-        uses: actions/cache@v2
-        with:
-          path: ${{ env.R_LIBS_USER }}
-          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
-          restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-
-
-      - name: Install dependencies
-        run: |
-          install.packages(c("remotes"))
-          remotes::install_deps(dependencies = TRUE)
-          remotes::install_cran("covr")
-        shell: Rscript {0}
 
       - name: Test coverage
-        run: covr::codecov()
-        shell: Rscript {0}
-# lintr-bot 
-  lint:
-    runs-on: macOS-latest
-    env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: r-lib/actions/setup-r@v1
-
-      - name: Query dependencies
-        run: |
-          install.packages('remotes')
-          saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
-          writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
-        shell: Rscript {0}
-
-      - name: Cache R packages
-        uses: actions/cache@v2
-        with:
-          path: ${{ env.R_LIBS_USER }}
-          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
-          restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-
-
-      - name: Install dependencies
-        run: |
-          install.packages(c("remotes"))
-          remotes::install_deps(dependencies = TRUE)
-          remotes::install_cran("lintr")
-        shell: Rscript {0}
-
-      - name: Install package
-        run: R CMD INSTALL .
+        run: if [[ "$INSTALL_TOOLS" == true ]]; then Rscript -e 'covr::codecov()'; fi
 
       - name: Lint
-        run: lintr::lint_package()
+        run: if [[ "$INSTALL_TOOLS" == false ]]; then Rscript -e 'lintr::lint_package()'; fi
+
+      - name: Report mchnuggetsr
+        run: mhcnuggetsr::mhcnuggetsr_report()
         shell: Rscript {0}
+
+      - name: Report mchnuggetsr
+        run: pureseqtmr::pureseqtmr_report()()
+        shell: Rscript {0}
+
