--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ bioc_packages:
 
 before_install:
   # Rmpfr
-  - sudo apt install -qq libmpfr-dev
+  #- sudo apt install -qq libmpfr-dev
   # ImageMagick
   - sudo apt-get update
   - sudo apt-get install -y libmagick++-dev
