Ignore .github in R build

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(check_ic50_prediction_tool)
 export(check_ic50_prediction_tool_installation)
 export(check_mhc_haplotype_name)
 export(check_protein_sequences_length)
+export(check_proteome_type)
 export(check_topology_prediction_tool)
 export(convert_triplet_to_amino_acid)
 export(correlate_to_hydrophobicity)
@@ -37,6 +38,8 @@ export(get_mhc2_peptide_length)
 export(get_mhc_haplotypes)
 export(get_mhc_peptide_length)
 export(get_non_tmh_peptides_from_elution)
+export(get_proteome)
+export(get_proteome_filename)
 export(get_target_english_name)
 export(get_target_names)
 export(get_test_covid_proteome_filename)
@@ -45,6 +48,8 @@ export(get_test_myco_proteome_filename)
 export(get_test_proteome_filename)
 export(get_tmh_lengths)
 export(get_tmh_peptides_from_elution)
+export(get_topology)
+export(get_topology_filename)
 export(get_transition_rate)
 export(get_transition_rates)
 export(get_uniprot_id)
