--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,8 @@ before_install:
   - sudo $(which R) CMD javareconf
   # bios2mds
   - sudo apt-get install libglu1-mesa-dev
+  # libgit2-dev
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt install libgit2-dev; fi
  
 
 before_script:
