--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(check_ic50_prediction_tool_installation)
 export(check_mhc_haplotype_name)
 export(check_protein_sequences_length)
 export(check_proteome_type)
+export(check_target_name)
 export(check_topology_prediction_tool)
 export(convert_triplet_to_amino_acid)
 export(correlate_to_hydrophobicity)
