--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(create_consensus_topology_conservation)
 export(create_haplotypes_lut)
 export(create_msa)
 export(create_n_mers)
+export(create_n_mers_tibble)
 export(create_proteins_lut)
 export(create_random_extreme_peptide)
 export(create_random_hydrophobic_peptide)
